# multi_agents_hands_on

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  professors.md  pyproject.toml
bit_professor_chat/: __init__.py  config.py  corpus_paths.py  graph_ingestion.py  ingestion.py  ingestion_models.py  legacy_cache.py  markdown_corpus.py  markdown_render.py  mcp_agent.py  mcp_neo4j_quiet.sh  model_factory.py  neo4j_queries.py  ocr_transcript.py  rerank_client.py  source_discovery.py  structured_profiles.py  structured_review.py  structured_seed.py  synthesis.py
docs/: course_data_flow.excalidraw
lab_1_langchain_pipeline/: lab1_lecture_university_template.html  lab1_theory_presentation.pptx  lab_1_langchain_pipeline.ipynb  lab_1_workflow.excalidraw  prepare_lab1_graph.py  promote_lab1_structured_seed.py  workflow_render.py
lab_2_langgraph_workflow/: __init__.py  lab_2_langgraph_workflow.ipynb  lab_2_workflow.excalidraw  prepare_lab2_corpus.py  workflow_render.py
lab_3_langgraph_swarm/: __init__.py  build_structured_output.py  lab_3_langgraph_swarm.ipynb  lab_3_swarm.excalidraw  notebook_factory.py  prepare_lab3_graph.py  workflow_render.py
lab_4_deep_agents/: __init__.py  build_professor_corpus.py  instructor_live_url_ocr_variant.md  lab_4_deep_agents.ipynb  lab_4_workflow.excalidraw  notebook_factory.py  professors.md  workflow_render.py
professors/: che-haiying.md  cheng-cheng.md  filippo-fabrocini.md  gao-guangyu.md  gao-yang.md  huang-heyan.md  huang-yonggang.md  jin-fusheng.md  li-dongni.md  li-fan.md  li-jianwu.md  li-kan.md  li-xin.md  (+31 more)
(+227 files in other folders)
